# Spec-Driven-Register-Verification-Pipeline

./: .gitignore  README.md
.github/workflows/: register-validation.yml
scripts/: fixup_generated.py  impact_summary.py  test_fixup_generated.py  test_impact_summary.py
svd/: TM4C123GH6PM.svd
testcrate/: Cargo.toml
testcrate/src/: lib.rs
